Mejorando calidad de codigo